--- a/src/Extensions/MauiItemTemplates/MauiItemTemplates/release-notes.txt
+++ b/src/Extensions/MauiItemTemplates/MauiItemTemplates/release-notes.txt
@@ -1,3 +1,3 @@
-What's new in ver. 1.0.0.1:
+What's new in ver. 1.0.0.2:
 
-Item Templates is categorized into sub-section titled MAUI
+Item templates for ContentView, in both XAML and C#.
