--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,3 +1,3 @@
-What's new in ver. 1.0.0.1:
+What's new in ver. 1.0.0.2:
 
-Item Templates is categorized into sub-section titled MAUI
+Item Templates for ContentView in both C# and XAML.
