--- a/src/ItemTemplates/MauiTemplatesCLI/release-notes.txt
+++ b/src/ItemTemplates/MauiTemplatesCLI/release-notes.txt
@@ -1,1 +1,7 @@
-An item template for .NET MAUI ShellPage in XAML (.NET 6 Preview 7)
+What's new in ver. 1.0.2:
+
+Project template for .NET MAUI class library
+
+Usage:
+
+dotnet new mauiclasslib
