--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,5 +1,5 @@
-What's new in ver. 1.0.0.5:
+What's new in ver. 1.0.0.6:
 
-Project template for .NET MAUI class library.
+C# and XAML Code Snippets.
 
-Item template for Shell page and Resource Dictionary.
+Refer the Readme file for list of code snippets and their shortcuts.
