--- a/src/ItemTemplates/MauiTemplatesCLI/release-notes.txt
+++ b/src/ItemTemplates/MauiTemplatesCLI/release-notes.txt
@@ -1,7 +1,3 @@
-What's new in ver. 1.0.2:
+What's new in ver. 1.0.3:
 
-Project template for .NET MAUI class library
-
-Usage:
-
-dotnet new mauiclasslib
+Templates have been updated for .NET MAUI Preview 9.
