--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,3 +1,3 @@
-What's new in ver. 1.0.0.8:
+What's new in ver. 1.0.0.9:
 
-Project templates updated for .NET MAUI Preview 8 with Single Project for all supported Platforms.
+Templates updated to support .NET MAUI Preview 10.
