Added target platform options

--- a/src/ItemTemplates/MauiTemplatesCLI/release-notes.txt
+++ b/src/ItemTemplates/MauiTemplatesCLI/release-notes.txt
@@ -1,3 +1,5 @@
-What's new in ver. 1.0.5:
+What's new in ver. 1.0.6:
 
 Templates have been updated for .NET MAUI Preview 12.
+
+Added the target platform options to the project file.
