--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,3 +1,5 @@
-What's new in ver. 1.0.0.9:
+What's new in ver. 1.0.0.10:
 
-Templates updated to support .NET MAUI Preview 10.
+Templates updated to support .NET MAUI Preview 12
+
+Added XAML only ResourceDictionary template
