--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -1,10 +1,6 @@
-What's new in ver. 1.1.2:
+What's new in ver. 1.1.3:
 -------------------------
-When handling the Save button click event in the 'New Event' page, the app flow is modified such that it returns to the calling page after dismissing the Alert dialog.
-
-Added .NET MAUI-themed branding icon to templates in Visual Studio IDE.
-
-Icon Courtesy: Braja Omar Justico's community contribution.
+CommunityToolkit.Maui.Markup NuGet package version updated to 1.0.0-pre7, the one compatible with Preview 13.
 
 Other than that, these are the features of the v1.1 series:
 
