--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,13 +1,19 @@
-What's new in ver. 1.1.0.0:
+What's new in ver. 1.1.1.0:
 
-Introduced an All-in-One .NET MAUI App Project Template.
+Added Xaml code snippet for BlazorWebView with shortcut titled bwv (with xmlns prefix as b).
 
-Refer to this article for more details:
+In any of the Xaml files, type bwv and press the tab to insert the snippet.
+
+Note: Adding xml namespace (xmlns) implicitly is not yet supported for Xaml snippets.
+
+So in order to effectively support the BlazorWebView snippet, included the .NET MAUI Blazor namespace itself as a code snippet with a shortcut titled mb (stands for Maui Blazor).
+
+Also includes the WPF Blazor namespace as a code snippet with a shortcut titled wb.
+
+For the namespace, type the snippet shortcut in the context of the root element attribute and press tab to insert the same.
+
+Other features that you may give it a try:
+
+The All-in-One .NET MAUI App Project Template. Refer to this article for more details:
 
 https://egvijayanand.in/all-in-one-dotnet-maui-app-project-template/
-
-Added Xaml code snippet for BlazorWebView with shortcut titled bwv with xmlns prefix as b.
-
-In any of the Xaml file, type bwv and press tab to insert the snippet.
-
-Note: Adding xml namespace (xmlns) is not supported for Xaml snippets, hence it's a manual action.
