--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -1,3 +1,5 @@
 What's new in ver. 1.3.0:
 -------------------------
 Templates have been updated to .NET MAUI RC1, latest release as of Apr 2022.
+
+Added Theming support for .NET MAUI Blazor Hybrid App project.
