--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,6 +1,8 @@
-What's new in ver. 1.2.0.0:
+What's new in ver. 1.3.0.0:
 
-Templates have been updated to latest .NET MAUI Preview release, Preview 14 as of Mar 2022
+Project templates updated to support .NET MAUI RC1, latest release as of Apr 2022
+
+App theming support added to .NET MAUI Blazor Hybrid App project
 
 Other features that you may give it a try:
 
