--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,8 +1,12 @@
-What's new in ver. 1.3.0.0:
+What's new in ver. 1.3.1.0:
 
-Project templates updated to support .NET MAUI RC1, latest release as of Apr 2022
+Project templates updated to support .NET MAUI RC1, latest release as of Apr 2022.
 
-App theming support added to .NET MAUI Blazor Hybrid App project
+Added Theming support for .NET MAUI Blazor Hybrid App project.
+
+Conditionally enabled the BlazorWebView Developer Tools for crafting a pixel-perfect UI.
+
+Included a VS Code Workspace file with the project to work seamlessly across IDEs.
 
 Other features that you may give it a try:
 
