--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,15 +1,19 @@
-What's new in ver. 1.3.1.0:
+What's new in ver. 1.4.0.0:
+---------------------------
+Templates have been updated to .NET MAUI RC2, latest release as of Apr 2022.
 
-Project templates updated to support .NET MAUI RC1, latest release as of Apr 2022.
+VS Code Workspace file included the project is made hidden while working with Visual Studio.
 
-Added Theming support for .NET MAUI Blazor Hybrid App project.
+Project templates updated to include Tizen platform artifacts.
 
-Conditionally enabled the BlazorWebView Developer Tools for crafting a pixel-perfect UI.
+Included an option to reference CommunityToolkit.Mvvm (aka Microsoft MVVM Toolkit) NuGet package while creating the project.
 
-Included a VS Code Workspace file with the project to work seamlessly across IDEs.
+More details on this exciting MVVM Toolkit here:
+
+https://egvijayanand.in/2022/04/22/mvvm-made-easy/
 
 Other features that you may give it a try:
 
 The All-in-One .NET MAUI App Project Template. Refer to this article for more details:
 
-https://egvijayanand.in/all-in-one-dotnet-maui-app-project-template/
+https://egvijayanand.in/2022/04/20/all-in-one-dotnet-maui-app-project-template-what-is-new/
