--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,6 +1,20 @@
 What's new in ver. 1.5.0.0:
 ---------------------------
-Templates have been updated to .NET MAUI RC3, the latest release as of May 2022.
+Included a Project Template for creating a Shared Class Library that produces assemblies targeting Xamarin.Forms and .NET MAUI.
+
+With C# Markup, Global usings and Compiler directives, both Xamarin.Forms and .NET MAUI can be targeted from single project.
+
+dotnet new sharedclasslib --name MySharedLib
+
+In which:
+
+*.forms.cs source files will be specific to Xamarin.Forms
+*.maui.cs source files will be specific to .NET MAUI
+*.shared.cs / *.logic.s will be common to both Xamarin.Forms and .NET MAUI
+
+Run the command dotnet new sharedclasslib --help for further details.
+
+Refer to VijayAnand.Toolkit.Markup NuGet package source made available here https://github.com/egvijayanand/dotnet-maui-toolkit for a sample.
 
 Other features that you may give it a try:
 
