--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,14 +1,17 @@
-What's new in ver. 1.7.3.1:
+What's new in ver. 1.7.4.0:
 ---------------------------
-1. Added a new Item Template for creating a Custom View and its associated Handler definitions.
+1. Added the following new Item Templates for creating a Custom View definition made available in the MAUI section in the Add New Item dialog.
 
-Check out the ".NET MAUI Custom View and Handler" made available in the MAUI section in the Add New Item dialog.
+.NET MAUI Custom View and Handler (Regular)
+.NET MAUI Custom View and Handler (Cond.)
+.NET MAUI Custom View and Renderer (Regular)
+.NET MAUI Custom View and Renderer (Cond.)
 
-Available in both Regular definition with Handler source files in corresponding Platforms folder or Defined with Conditional Definition in a single folder
+Regular type template generates the Handler source files in the Platforms folder whereas Cond. type template houses them in a single folder.
 
-For conditional compilation format, ensure it is enabled for this particular item template to work properly. An additional option provided during project creation
+For conditional type format, ensure Conditional Compilation is configured in the project file for the build to succeed. An additional option is provided during project creation (or thereafter manually).
 
-2. Added the option to configure conditional compilation so that platform source files can be defined anywhere in the project provided they follow a naming convention as mentioned below.
+2. Added the option to configure Conditional Compilation so that platform source files can be defined anywhere in the project provided they follow a naming convention as mentioned below.
 
 This will allow maintaining related source files in the same place, especially MAUI Handlers.
 
