--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,14 +1,15 @@
-What's new in ver. 1.7.4.1:
+What's new in ver. 1.7.5.0:
 ---------------------------
 1. Added the following new Item Templates for creating a Custom View definition made available in the MAUI section in the Add New Item dialog.
 
-.NET MAUI Custom View and Handler (Regular)
-.NET MAUI Custom View and Handler (Cond.)
-.NET MAUI Custom View and Renderer (Regular)
+Custom View and Handler (Regular) (.NET MAUI)
+Custom View and Handler (Cond.) (.NET MAUI)
+Custom View and Renderer (Regular) (.NET MAUI)
+Custom View and Renderer (Cond.) (.NET MAUI)
 
-Regular type template generates the Handler source files in the Platforms folder whereas Cond. type template houses them in a single folder.
+Regular type template generates the Handler / Renderer source files in the Platforms folder whereas Cond. type template houses them in a single folder.
 
-For conditional type format, ensure Conditional Compilation is configured in the project file for the build to succeed. An additional option is provided during project creation (or thereafter manually).
+For conditional type format, ensure Conditional Compilation is configured in the project file for the build to succeed. An additional option is provisioned during project creation (or manually thereafter).
 
 2. Added the option to configure Conditional Compilation so that platform source files can be defined anywhere in the project provided they follow a naming convention as mentioned below.
 
@@ -23,11 +24,11 @@ This will allow maintaining related source files in the same place, especially M
 
 Parameter name: -cc | --conditional-compilation
 
-Templates have been updated to .NET MAUI GA, stable release version.
+Templates have been updated to .NET MAUI GA, stable release version. Also compatible with recent SR1 release too.
 
 Breaking change: To make things easier, All-in-One and Class Library templates parameters for various package inclusion have been updated to Boolean parameter type.
 
-Also check out the newly included project template for creating a Shared Class Library that produces assemblies targeting Xamarin.Forms and .NET MAUI.
+Also check out the newly included project template for creating a Shared Class Library that produces assemblies targeting Xamarin.Forms and .NET MAUI from the same project.
 
 With C# Markup, Global usings and Compiler directives, both Xamarin.Forms and .NET MAUI can be targeted from single project.
 
@@ -41,7 +42,9 @@ In which:
 
 Run the command dotnet new sharedclasslib --help for further details.
 
-Refer to VijayAnand.Toolkit.Markup NuGet package source made available here https://github.com/egvijayanand/dotnet-maui-toolkit for a sample.
+https://egvijayanand.in/2022/05/25/introducing-shared-class-library-multi-target-xamarin-forms-and-dotnet-maui-from-a-single-project/
+
+As a sample, refer to VijayAnand.Toolkit.Markup NuGet package source made available here https://github.com/egvijayanand/dotnet-maui-toolkit
 
 Other features that you may give it a try:
 
