Updated VS extension with support for CommunityToolkit.Mvvm stable

--- a/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
+++ b/src/Extensions/MauiTemplates/MauiTemplates/release-notes.txt
@@ -1,5 +1,7 @@
-What's new in ver. 1.7.6.1:
+What's new in ver. 1.7.6.3:
 ---------------------------
+CommunityToolkit.Mvvm NuGet package is out of preview and now stable, hence package version (8.0.0) updated.
+
 1. A new item template for Content Page, in both XAML and C#, with ViewModel following the MVVM design pattern.
 
 The ViewModels are generated with the base class titled BaseViewModel (implementation left to the user).
