--- a/src/MauiTemplatesCLI/release-notes.txt
+++ b/src/MauiTemplatesCLI/release-notes.txt
@@ -1,6 +1,6 @@
-What's new in ver. 2.0.0:
+What's new in ver. 2.0.1:
 -------------------------
-Templates have been updated to support .NET MAUI on .NET 7 (RC1 - Preview release).
+Templates have been updated to support .NET MAUI on .NET 7 (RC2 - Preview release).
 
 1. A parameter named framework has been introduced that takes either net6.0 or net7.0 as its options (with net7.0 being the default value).
 
@@ -8,10 +8,8 @@ dotnet new mauiapp --framework net6.0
 
 dotnet new mauiapp -f net7.0
 
-2. For projects targeting .NET 7, option to add and configure Maui Maps NuGet package.
+2. For App project targeting .NET 7, option to add and configure Maui Maps NuGet package.
 
 Note: If project target .NET 6, selecting the Maps option will NOT have any impact.
-
-Refer to VijayAnand.Toolkit.Markup NuGet package source made available here https://github.com/egvijayanand/dotnet-maui-toolkit for a sample.
 
 Join me on Developer Thoughts (https://egvijayanand.in/), an exclusive blog for articles on .NET MAUI and Blazor.
